Sync website/content/ru/where.adoc to the EN 728be2f55235470406eb01e9a547770c44410e7a revision. Link "ru" content to the main page.
Reviewed by:	carlavilla, maxim (mentor), vladlen
Differential Revision:	https://reviews.freebsd.org/D53041

--- a/website/content/ru/where.adoc
+++ b/website/content/ru/where.adoc
@@ -1,3 +1,8 @@
+//
+// The FreeBSD Russian Documentation Project
+//
+// Original EN revision (06.10.2025): 728be2f55235470406eb01e9a547770c44410e7a
+//
 ---
 title: "Получение FreeBSD"
 sidenav: download
@@ -11,225 +16,240 @@ include::shared/ru/urls.adoc[]
 
 = Получение FreeBSD
 
-[releases]]
-== link:../releases/[Информация о релизах]
+Для получения общей информации о прошлых, текущих и будущих релизах обратитесь к link:../releases/[Информации о релизах].
 
-Подробное описание уже вышедших, текущих и планируемых релизов. Обращайтесь сюда, чтобы узнать, какая версия FreeBSD является самой последней.
+[[choose-version]]
+[[choose-arch]]
+== Выбор архитектуры
 
-[[install]]
-== link:{handbook}#install[Установка FreeBSD]
+У большинства пользователей FreeBSD будет иметься в наличии оборудование для **amd64** или **aarch64**. Эти архитектуры являются хорошо поддерживаемыми.
 
-Существует много вариантов установки FreeBSD, включая инсталляцию с компакт-диска, DVD, дискет, раздела MS-DOS(R), магнитной ленты, анонимного FTP сервера и NFS. Пожалуйста, взгляните на link:{handbook}#install[руководство по установке], прежде чем скачивать полный дистрибутив FreeBSD.
+Большинство современных ПК, в том числе с процессорами Intel(R), используют **amd64**.
 
-[[distribution]]
-== Покупка FreeBSD
+Встраиваемые устройства и одноплатные компьютеры (SBC), такие как Raspberry Pi 3 и 4, ESPRESSObin, а также платы Allwinner и Rockchip, используют **aarch64**.
 
-FreeBSD можно приобрести на компакт-диске или DVD у http://www.freebsdmall.com/[FreeBSD Mall] или у других link:{handbook}#mirrors[издателей компакт-дисков и DVD].
+Для получения информации о всех других архитектурах, пожалуйста, обратитесь к link:../platforms/#_supported_platforms[таблице поддерживаемых платформ].
+
+[[choose-image]]
+== Выбор образа
+
+Для программы установки FreeBSD: среди форматов имеются как ISO, по размеру соответствующие DVD (disc1, dvd1), так и предназначенные для установки по сети (bootonly), а также образы флэш-накопителей USB обычного и минимального объёма.
+
+Для виртуальных машин: образы виртуальных дисков содержат предварительно установленную FreeBSD.
+
+Для встраиваемых платформ: доступны образы карт памяти SD.
 
 [[download]]
-[[download-rel131]]
-== FreeBSD {rel131-current}-RELEASE
+== Качество промышленной эксплуатации
+
+Релизные (`RELEASE`) версии FreeBSD являются конечным результатом _подготовки релизов_ и рекомендуются для большинства пользователей.
+
+[[download-rel143]]
+=== FreeBSD {rel143-current}-RELEASE
+
 [.tblbasic]
 [.tblDownload]
 [width="100%",cols="25%,25%,25%,25%",options="header",]
 |===
-|Installer Images |Virtual Machine Images |SD Card Images |Documentation
+|Программа установки |VM |Карта памяти SD |Документация
 a|
-* link:{url-rel}/amd64/amd64/ISO-IMAGES/{rel131-current}/[amd64]
-* link:{url-rel}/i386/i386/ISO-IMAGES/{rel131-current}/[i386]
-* link:{url-rel}/powerpc/powerpc/ISO-IMAGES/{rel131-current}/[powerpc]
-* link:{url-rel}/powerpc/powerpc64/ISO-IMAGES/{rel131-current}/[powerpc64]
-* link:{url-rel}/powerpc/powerpc64le/ISO-IMAGES/{rel131-current}/[powerpc64le]
-* link:{url-rel}/powerpc/powerpcspe/ISO-IMAGES/{rel131-current}/[powerpcspe]
-* link:{url-rel}/arm/armv6/ISO-IMAGES/{rel131-current}/[armv6]
-* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel131-current}/[armv7]
-* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel131-current}/[aarch64]
-* link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel131-current}/[riscv64]
+* link:{url-rel}/amd64/amd64/ISO-IMAGES/{rel143-current}/[amd64]
+* link:{url-rel}/i386/i386/ISO-IMAGES/{rel143-current}/[i386]
+* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[aarch64]
+* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel143-current}/[armv7]
+* link:{url-rel}/powerpc/powerpc/ISO-IMAGES/{rel143-current}/[powerpc]
+* link:{url-rel}/powerpc/powerpc64/ISO-IMAGES/{rel143-current}/[powerpc64]
+* link:{url-rel}/powerpc/powerpc64le/ISO-IMAGES/{rel143-current}/[powerpc64le]
+* link:{url-rel}/powerpc/powerpcspe/ISO-IMAGES/{rel143-current}/[powerpcspe]
+* link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel143-current}/[riscv64]
 
 a|
 * link:{url-rel}/VM-IMAGES/README.txt[README]
-* link:{url-rel}/VM-IMAGES/{rel131-current}-RELEASE/amd64/Latest/[amd64]
-* link:{url-rel}/VM-IMAGES/{rel131-current}-RELEASE/i386/Latest/[i386]
-* link:{url-rel}/VM-IMAGES/{rel131-current}-RELEASE/aarch64/Latest/[aarch64]
-* link:{url-rel}/VM-IMAGES/{rel131-current}-RELEASE/riscv64/Latest/[riscv64]
-* link:{url-rel}/CI-IMAGES/{rel131-current}-RELEASE/amd64/Latest/[amd64] (BASIC-CI)
+* link:{url-rel}/VM-IMAGES/{rel143-current}-RELEASE/amd64/Latest/[amd64]
+* link:{url-rel}/VM-IMAGES/{rel143-current}-RELEASE/i386/Latest/[i386]
+* link:{url-rel}/VM-IMAGES/{rel143-current}-RELEASE/aarch64/Latest/[aarch64]
+* link:{url-rel}/VM-IMAGES/{rel143-current}-RELEASE/riscv64/Latest/[riscv64]
+* link:{url-rel}/CI-IMAGES/{rel143-current}-RELEASE/amd64/Latest/[amd64] (BASIC-CI)
+* link:{url-rel}/CI-IMAGES/{rel143-current}-RELEASE/aarch64/Latest/[aarch64] (BASIC-CI)
 
 a|
 * aarch64
 * {blank}
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel131-current}/[PINE64]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel131-current}/[PINE64-LTS]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel131-current}/[ROCK64]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel131-current}/[ROCKPRO64]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel131-current}/[RPI] (3/4)
-* armv6/armv7
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[PINE64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[PINE64-LTS]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[ROCK64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[ROCKPRO64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[RPI] (3/4)
+* armv7
 * {blank}
-** link:{url-rel}/arm/armv7/ISO-IMAGES/{rel131-current}/[GENERICSD]
-** link:{url-rel}/arm/armv6/ISO-IMAGES/{rel131-current}/[RPI-B]
+** link:{url-rel}/arm/armv7/ISO-IMAGES/{rel143-current}/[GENERICSD]
 * riscv64
 * {blank}
-** link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel131-current}/[GENERICSD]
+** link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel143-current}/[GENERICSD]
 
 a|
-* link:../releases/#current[Released]: {rel131-current-date}
-* link:{u-rel131-notes}[Release Notes]
-* link:{u-rel131-readme}[Readme]
-* link:{u-rel131-hardware}[Hardware Compatibility List]
-* link:{u-rel131-installation}[Installation Instructions]
-* link:{u-rel131-errata}[Errata]
-* link:{u-rel131-signatures}[Signed Checksums]
+* {blank}
+* link:../releases/#current[Релиз]: {rel143-current-date}
+* link:{u-rel143-notes}[Описание релиза]
+* link:{u-rel143-readme}[Вводная информация]
+* link:{u-rel143-hardware}[Информация об аппаратной совместимости]
+* link:{u-rel143-installation}[Инструкции по установке]
+* link:{u-rel143-errata}[Неисправности]
+* link:{u-rel143-signatures}[Заверенные контрольные суммы]
 
 |===
 
-[[download-rel130]]
-== FreeBSD {rel130-current}-RELEASE
+== Качество промышленной эксплуатации (исторические)
+
+Некоторые релизы FreeBSD, хотя и поддерживаются, являются либо более старыми, либо строятся из более старых веток `STABLE`; они рассматриваются как "исторические" и, скорее всего, представляют интерес только для тех, кто занимается обслуживанием существующих систем FreeBSD.
+
+[[download-rel135]]
+=== FreeBSD {rel135-current}-RELEASE
 [.tblbasic]
 [.tblDownload]
 [width="100%",cols="25%,25%,25%,25%",options="header",]
 |===
-|Installer Images |Virtual Machine Images |SD Card Images |Documentation
+|Программа установки |VM |Карта памяти SD |Документация
 a|
-* link:{url-rel}/amd64/amd64/ISO-IMAGES/{rel130-current}/[amd64]
-* link:{url-rel}/i386/i386/ISO-IMAGES/{rel130-current}/[i386]
-* link:{url-rel}/powerpc/powerpc/ISO-IMAGES/{rel130-current}/[powerpc]
-* link:{url-rel}/powerpc/powerpc64/ISO-IMAGES/{rel130-current}/[powerpc64]
-* link:{url-rel}/powerpc/powerpc64le/ISO-IMAGES/{rel130-current}/[powerpc64le]
-* link:{url-rel}/powerpc/powerpcspe/ISO-IMAGES/{rel130-current}/[powerpcspe]
-* link:{url-rel}/arm/armv6/ISO-IMAGES/{rel130-current}/[armv6]
-* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel130-current}/[armv7]
-* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel130-current}/[aarch64]
-* link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel130-current}/[riscv64]
+* link:{url-rel}/amd64/amd64/ISO-IMAGES/{rel135-current}/[amd64]
+* link:{url-rel}/i386/i386/ISO-IMAGES/{rel135-current}/[i386]
+* link:{url-rel}/powerpc/powerpc/ISO-IMAGES/{rel135-current}/[powerpc]
+* link:{url-rel}/powerpc/powerpc64/ISO-IMAGES/{rel135-current}/[powerpc64]
+* link:{url-rel}/powerpc/powerpc64le/ISO-IMAGES/{rel135-current}/[powerpc64le]
+* link:{url-rel}/powerpc/powerpcspe/ISO-IMAGES/{rel135-current}/[powerpcspe]
+* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[aarch64]
+* link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel135-current}/[riscv64]
 
 a|
 * link:{url-rel}/VM-IMAGES/README.txt[README]
-* link:{url-rel}/VM-IMAGES/{rel130-current}-RELEASE/amd64/Latest/[amd64]
-* link:{url-rel}/VM-IMAGES/{rel130-current}-RELEASE/i386/Latest/[i386]
-* link:{url-rel}/VM-IMAGES/{rel130-current}-RELEASE/aarch64/Latest/[aarch64]
-* link:{url-rel}/VM-IMAGES/{rel130-current}-RELEASE/riscv64/Latest/[riscv64]
+* link:{url-rel}/VM-IMAGES/{rel135-current}-RELEASE/amd64/Latest/[amd64]
+* link:{url-rel}/VM-IMAGES/{rel135-current}-RELEASE/i386/Latest/[i386]
+* link:{url-rel}/VM-IMAGES/{rel135-current}-RELEASE/aarch64/Latest/[aarch64]
+* link:{url-rel}/VM-IMAGES/{rel135-current}-RELEASE/riscv64/Latest/[riscv64]
+* link:{url-rel}/CI-IMAGES/{rel135-current}-RELEASE/amd64/Latest/[amd64] (BASIC-
+CI)
+* link:{url-rel}/CI-IMAGES/{rel135-current}-RELEASE/aarch64/Latest/[aarch64] (BASIC-CI)
 
 a|
 * aarch64
 * {blank}
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel130-current}/[PINE64]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel130-current}/[PINE64-LTS]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel130-current}/[ROCK64]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel130-current}/[ROCKPRO64]
-** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel130-current}/[RPI] (3/4)
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[PINE64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[PINE64-LTS]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[PINEBOOK]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[ROCK64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[ROCKPRO64]
+** link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[RPI] (3/4)
 * armv6/armv7
 * {blank}
-** link:{url-rel}/arm/armv7/ISO-IMAGES/{rel130-current}/[GENERICSD]
-** link:{url-rel}/arm/armv6/ISO-IMAGES/{rel130-current}/[RPI-B]
+** link:{url-rel}/arm/armv7/ISO-IMAGES/{rel135-current}/[GENERICSD]
+** link:{url-rel}/arm/armv6/ISO-IMAGES/{rel135-current}/[RPI-B]
 * riscv64
 * {blank}
-** link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel130-current}/[GENERICSD]
+** link:{url-rel}/riscv/riscv64/ISO-IMAGES/{rel135-current}/[GENERICSD]
 
 a|
-* link:../releases/#current[Released]: {rel130-current-date}
-* link:{u-rel130-notes}[Release Notes]
-* link:{u-rel130-readme}[Readme]
-* link:{u-rel130-hardware}[Hardware Compatibility List]
-* link:{u-rel130-installation}[Installation Instructions]
-* link:{u-rel130-errata}[Errata]
-* link:{u-rel130-signatures}[Signed Checksums]
-
+* link:../releases/#current[Релиз]: {rel135-current-date}
+* link:{u-rel135-notes}[Описание релиза]
+* link:{u-rel135-readme}[Вводная информация]
+* link:{u-rel135-hardware}[Информация об аппаратной совместимости]
+* link:{u-rel135-installation}[Инструкции по установке]
+* link:{u-rel135-errata}[Неисправности]
+* link:{u-rel135-signatures}[Заверенные контрольные суммы]
 |===
 
-[[download-rel123]]
-== FreeBSD {rel123-current}-RELEASE
+[[helptest]]
+== Разработка и тестирование
 
-[.tblbasic]
-[.tblDownload]
-[width="100%",cols="25%,25%,25%,25%",options="header",]
-|===
-|Installer Images |Virtual Machine Images |SD Card Images |Documentation
-a|
-* link:{url-rel}/amd64/amd64/ISO-IMAGES/{rel123-current}/[amd64]
-* link:{url-rel}/i386/i386/ISO-IMAGES/{rel123-current}/[i386]
-* link:{url-rel}/powerpc/powerpc/ISO-IMAGES/{rel123-current}/[powerpc]
-* link:{url-rel}/powerpc/powerpc64/ISO-IMAGES/{rel123-current}/[powerpc64]
-* link:{url-rel}/powerpc/powerpcspe/ISO-IMAGES/{rel123-current}/[powerpcspe]
-* link:{url-rel}/sparc64/sparc64/ISO-IMAGES/{rel123-current}/[sparc64]
-* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel123-current}/[aarch64]
+Версии FreeBSD, предваряющие `RELEASE`, не предназначены к использованию в средах промышленной эксплуатации:
 
-a|
-* link:{url-rel}/VM-IMAGES/README.txt[README]
-* link:{url-rel}/VM-IMAGES/{rel123-current}-RELEASE/amd64/Latest/[amd64]
-* link:{url-rel}/VM-IMAGES/{rel123-current}-RELEASE/i386/Latest/[i386]
-* link:{url-rel}/VM-IMAGES/{rel123-current}-RELEASE/aarch64/Latest/[aarch64]
+* `CURRENT` – основная ветка, центр разработки
+* `STABLE` – ответвляется от `CURRENT`, долгосрочные подготовки к выпуску релиза
+* подготовка релиза – `ALPHA`, `BETA`, кандидаты для релиза (`RC`) – ответвляются от `STABLE`.
 
-a|
-* link:{url-rel}/arm/armv6/ISO-IMAGES/{rel123-current}/FreeBSD-{rel123-current}-RELEASE-arm-armv6-RPI-B.img.xz[RPI-B]
-* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel123-current}/FreeBSD-{rel123-current}-RELEASE-arm-armv7-BANANAPI.img.xz[BANANAPI]
-* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel123-current}/FreeBSD-{rel123-current}-RELEASE-arm-armv7-CUBIEBOARD.img.xz[CUBIEBOARD]
-* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel123-current}/FreeBSD-{rel123-current}-RELEASE-arm-armv7-CUBIEBOARD2.img.xz[CUBIEBOARD2]
-* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel123-current}/FreeBSD-{rel123-current}-RELEASE-arm-armv7-CUBOX-HUMMINGBOARD.img.xz[CUBOX-HUMMINGBOARD]
-* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel123-current}/FreeBSD-{rel123-current}-RELEASE-arm-armv7-GENERICSD.img.xz[GENERICSD]
-* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel123-current}/FreeBSD-{rel123-current}-RELEASE-arm-armv7-RPI2.img.xz[RPI2]
-* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel123-current}/FreeBSD-{rel123-current}-RELEASE-arm-armv7-PANDABOARD.img.xz[PANDABOARD]
-* link:{url-rel}/arm/armv7/ISO-IMAGES/{rel123-current}/FreeBSD-{rel123-current}-RELEASE-arm-armv7-WANDBOARD.img.xz[WANDBOARD]
-* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel123-current}/FreeBSD-{rel123-current}-RELEASE-arm64-aarch64-PINE64.img.xz[PINE64]
-* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel123-current}/FreeBSD-{rel123-current}-RELEASE-arm64-aarch64-PINE64-LTS.img.xz[PINE64-LTS]
-//* link:{url-rel}/arm64/aarch64/ISO-IMAGES/{rel123-current}/FreeBSD-{rel123-current}-RELEASE-arm64-aarch64-RPI3.img.xz[RPI3]
+Заглавные буквы имеют особенное значение. К примеру:
 
-a|
-* {blank}
-* link:../releases/#current[Released]: {rel123-current-date}
-* link:{u-rel123-notes}[Release Notes]
-* link:{u-rel123-readme}[Readme]
-* link:{u-rel123-hardware}[Hardware Compatibility List]
-* link:{u-rel123-installation}[Installation Instructions]
-* link:{u-rel123-errata}[Errata]
-* link:{u-rel123-signatures}[Signed Checksums]
+* первый _бета-релиз_ не является (продуктивным) релизом `RELEASE`.
 
-|===
+Слово `CURRENT` иногда является причиной недоразумений:
 
-//[[helptest]]
-//== Help Test
-//
-//If you are interested in testing the next upcoming release, please visit the link:../where/[FreeBSD download page].
+* если вы ищете _текущую версию FreeBSD_, то, скорее всего, вам нужна релизная (`RELEASE`) версия (смотрите выше), а **не** `CURRENT`. Для процесса разработки `CURRENT` имеет особое значение.
 
-_Замечание:_ Если вы сомневаетесь, какую платформу / архитектуру использовать, вам скорее всего нужна _i386_.
+[[download-snapshots]]
+== Промежуточные релизы разработки
 
-Если вы собираетесь загрузить FreeBSD по FTP, проверьте, пожалуйста, список link:{handbook}#mirrors-ftp[*зеркальных серверов*] в руководстве, чтобы найти ближайший к вам сайт.
+Обратитесь к разделу link:../snapshots/[Промежуточные релизы FreeBSD].
 
-== FreeBSD {rel-head}-CURRENT
+=== FreeBSD {rel-head}-ALPHA
 
-Installer and SD card images are available for link:{url-snapshot}/amd64/amd64/ISO-IMAGES/{rel-head}/[amd64], link:{url-snapshot}/i386/i386/ISO-IMAGES/{rel-head}/[i386], link:{url-snapshot}/powerpc/powerpc/ISO-IMAGES/{rel-head}/[powerpc], link:{url-snapshot}/powerpc/powerpc64/ISO-IMAGES/{rel-head}/[powerpc64], link:{url-snapshot}/powerpc/powerpc64le/ISO-IMAGES/{rel-head}/[powerpc64le], link:{url-snapshot}/powerpc/powerpcspe/ISO-IMAGES/{rel-head}/[powerpcspe], link:{url-snapshot}/arm/armv6/ISO-IMAGES/{rel-head}/[armv6], link:{url-snapshot}/arm/armv7/ISO-IMAGES/{rel-head}/[armv7], link:{url-snapshot}/arm64/aarch64/ISO-IMAGES/{rel-head}/[aarch64], and link:{url-snapshot}/riscv/riscv64/ISO-IMAGES/{rel-head}/[riscv64].
+Установочные образы и образы карт памяти SD доступны для link:{url-snapshot}/amd64/amd64/ISO-IMAGES/{rel-head}/[amd64], link:{url-snapshot}/powerpc/powerpc64/ISO-IMAGES/{rel-head}/[powerpc64], link:{url-snapshot}/powerpc/powerpc64le/ISO-IMAGES/{rel-head}/[powerpc64le], link:{url-snapshot}/arm/armv7/ISO-IMAGES/{rel-head}/[armv7], link:{url-snapshot}/arm64/aarch64/ISO-IMAGES/{rel-head}/[aarch64] и link:{url-snapshot}/riscv/riscv64/ISO-IMAGES/{rel-head}/[riscv64].
 
-VM images are available for link:{url-snapshot}/VM-IMAGES/{rel-head}-CURRENT/amd64/Latest/[amd64], link:{url-snapshot}/VM-IMAGES/{rel-head}-CURRENT/i386/Latest/[i386], link:{url-snapshot}/VM-IMAGES/{rel-head}-CURRENT/aarch64/Latest/[aarch64], and link:{url-snapshot}/VM-IMAGES/{rel-head}-CURRENT/riscv64/Latest/[riscv64].
+Образы виртуальных машин доступны для link:{url-snapshot}/VM-IMAGES/{rel-head}-CURRENT/amd64/Latest/[amd64], link:{url-snapshot}/VM-IMAGES/{rel-head}-CURRENT/aarch64/Latest/[aarch64] и link:{url-snapshot}/VM-IMAGES/{rel-head}-CURRENT/riscv64/Latest/[riscv64].
 
-== FreeBSD {rel131-current}-STABLE
+=== FreeBSD {rel143-current}-STABLE
 
-Installer and SD card images are available for link:{url-snapshot}/amd64/amd64/ISO-IMAGES/{rel131-current}/[amd64], link:{url-snapshot}/i386/i386/ISO-IMAGES/{rel131-current}/[i386], link:{url-snapshot}/powerpc/powerpc/ISO-IMAGES/{rel131-current}/[powerpc], link:{url-snapshot}/powerpc/powerpc64/ISO-IMAGES/{rel131-current}/[powerpc64], link:{url-snapshot}/powerpc/powerpc64le/ISO-IMAGES/{rel131-current}/[powerpc64le], link:{url-snapshot}/powerpc/powerpcspe/ISO-IMAGES/{rel131-current}/[powerpcspe], link:{url-snapshot}/arm/armv6/ISO-IMAGES/{rel131-current}/[armv6], link:{url-snapshot}/arm/armv7/ISO-IMAGES/{rel131-current}/[armv7], link:{url-snapshot}/arm64/aarch64/ISO-IMAGES/{rel131-current}/[aarch64], and link:{url-snapshot}/riscv/riscv64/ISO-IMAGES/{rel131-current}/[riscv64].
+Установочные образы и образы карт памяти SD доступны для link:{url-snapshot}/amd64/amd64/ISO-IMAGES/{rel143-current}/[amd64], link:{url-snapshot}/i386/i386/ISO-IMAGES/{rel143-current}/[i386], link:{url-snapshot}/powerpc/powerpc/ISO-IMAGES/{rel143-current}/[powerpc], link:{url-snapshot}/powerpc/powerpc64/ISO-IMAGES/{rel143-current}/[powerpc64], link:{url-snapshot}/powerpc/powerpc64le/ISO-IMAGES/{rel143-current}/[powerpc64le], link:{url-snapshot}/powerpc/powerpcspe/ISO-IMAGES/{rel143-current}/[powerpcspe], link:{url-snapshot}/arm/armv7/ISO-IMAGES/{rel143-current}/[armv7], link:{url-snapshot}/arm64/aarch64/ISO-IMAGES/{rel143-current}/[aarch64] и link:{url-snapshot}/riscv/riscv64/ISO-IMAGES/{rel143-current}/[riscv64].
 
-VM images are available for link:{url-snapshot}/VM-IMAGES/{rel131-current}-STABLE/amd64/Latest/[amd64], link:{url-snapshot}/VM-IMAGES/{rel131-current}-STABLE/i386/Latest/[i386], link:{url-snapshot}/VM-IMAGES/{rel131-current}-STABLE/aarch64/Latest/[aarch64], and link:{url-snapshot}/VM-IMAGES/{rel131-current}-STABLE/riscv64/Latest/[riscv64].
+Образы виртуальных машин доступны для link:{url-snapshot}/VM-IMAGES/{rel143-current}-STABLE/amd64/Latest/[amd64], link:{url-snapshot}/VM-IMAGES/{rel143-current}-STABLE/i386/Latest/[i386], link:{url-snapshot}/VM-IMAGES/{rel143-current}-STABLE/aarch64/Latest/[aarch64] и link:{url-snapshot}/VM-IMAGES/{rel143-current}-STABLE/riscv64/Latest/[riscv64].
 
-== FreeBSD {rel123-current}-STABLE
+=== FreeBSD {rel135-current}-STABLE
 
-Installer and SD card images are available for link:{url-snapshot}/amd64/amd64/ISO-IMAGES/{rel123-current}/[amd64], link:{url-snapshot}/i386/i386/ISO-IMAGES/{rel123-current}/[i386], link:{url-snapshot}/powerpc/powerpc/ISO-IMAGES/{rel123-current}/[powerpc], link:{url-snapshot}/powerpc/powerpc64/ISO-IMAGES/{rel123-current}/[powerpc64], link:{url-snapshot}/powerpc/powerpcspe/ISO-IMAGES/{rel123-current}/[powerpcspe], link:{url-snapshot}/sparc64/sparc64/ISO-IMAGES/{rel123-current}/[sparc64], link:{url-snapshot}/arm/armv6/ISO-IMAGES/{rel123-current}/[armv6], link:{url-snapshot}/arm/armv7/ISO-IMAGES/{rel123-current}/[armv7], and link:{url-snapshot}/arm64/aarch64/ISO-IMAGES/{rel123-current}/[aarch64].
+Установочные образы и образы карт памяти SD доступны для link:{url-snapshot}/amd64/amd64/ISO-IMAGES/{rel135-current}/[amd64], link:{url-snapshot}/i386/i386/ISO-IMAGES/{rel135-current}/[i386], link:{url-snapshot}/powerpc/powerpc/ISO-IMAGES/{rel135-current}/[powerpc], link:{url-snapshot}/powerpc/powerpc64/ISO-IMAGES/{rel135-current}/[powerpc64], link:{url-snapshot}/powerpc/powerpc64le/ISO-IMAGES/{rel135-current}/[powerpc64le], link:{url-snapshot}/powerpc/powerpcspe/ISO-IMAGES/{rel135-current}/[powerpcspe], link:{url-snapshot}/arm/armv6/ISO-IMAGES/{rel135-current}/[armv6], link:{url-snapshot}/arm/armv7/ISO-IMAGES/{rel135-current}/[armv7], link:{url-snapshot}/arm64/aarch64/ISO-IMAGES/{rel135-current}/[aarch64] и link:{url-snapshot}/riscv/riscv64/ISO-IMAGES/{rel135-current}/[riscv64].
 
-VM images are available for link:{url-snapshot}/VM-IMAGES/{rel123-current}-STABLE/amd64/Latest/[amd64] and link:{url-snapshot}/VM-IMAGES/{rel123-current}-STABLE/i386/Latest/[i386].
+Образы виртуальных машин доступны для link:{url-snapshot}/VM-IMAGES/{rel135-current}-STABLE/amd64/Latest/[amd64], link:{url-snapshot}/VM-IMAGES/{rel135-current}-STABLE/i386/Latest/[i386], link:{url-snapshot}/VM-IMAGES/{rel135-current}-STABLE/aarch64/Latest/[aarch64] и link:{url-snapshot}/VM-IMAGES/{rel135-current}-STABLE/riscv64/Latest/[riscv64].
 
-Если вы интересуетесь исключительно экспериментальным *снэпшотом* FreeBSD-CURRENT (он же &rel.head;-CURRENT), предназначенным только для разработчиков и тестеров, то обратитесь к странице link:../snapshots/[снэпшот релизов FreeBSD]. Чтобы узнать более подробную информацию о прошлых, настоящих и будущих релизах в общем, посетите link:../releases/[страничку с информацией о релизах].
+[[install]]
+== Установка
 
-[[derived]]
-== Распространяемые FreeBSD-производные операционные системы
+Имеющиеся варианты:
 
-FreeBSD широко используется в качестве составной части коммерческих операционных систем и систем с открытым кодом. Приведённые ниже проекты получили большое распространение и представляют особый интерес для пользователей FreeBSD.
+* образы
+* прямое скачивание (общедоступный FTP и HTTPS).
 
-* http://www.freenas.org[FreeNAS] - это платформа с открытым кодом для построения хранилища данных, основанная на FreeBSD, которая позволяет обмениваться ресурсами между Windows, Apple и UNIX-подобными системами.
-* http://www.pcbsd.org[PC-BSD] - это производная FreeBSD, наделенная графической программой установки, впечатляющим инструментарием рабочего стола, ориентированная на доступность в использовании для не искушенного пользователя.
-* http://www.pfsense.org[pfSense] - это свободный открытый настраиваемый дистрибутив на основе FreeBSD, приспособленный для использования в качестве межсетевого экрана и маршрутизатора.
+До того, как скачивать полный дистрибутив, пожалуйста, прочтите link:{handbook}bsdinstall/[руководство по установке].
+
+Если вы планируете сгрузить FreeBSD средствами FTP или HTTPS, обратитесь к Руководству по FreeBSD на предмет наличия link:{handbook}mirrors/#mirrors[подходящих зеркалирующих серверов] для вашего региона.
+
+[[distribution]]
+== Покупка носителей с FreeBSD
+
+FreeBSD можно приобрести на DVD у компании http://www.freebsdmall.com/[FreeBSD Mall] и других link:{handbook}mirrors/#mirrors-disc[издателей DVD].
 
 [[apps]]
 == Приложения и утилиты
 
 === Коллекция портов
 
-Коллекция портов FreeBSD - это набор разнообразных утилит и приложений, портированных на FreeBSD.
+Коллекция разнообразных утилит и приложений, которые были _портированы_ во FreeBSD.
 
-* ftp://ftp.FreeBSD.org/pub/FreeBSD/ports/[Коллекция портов FreeBSD]
-* link:../ports/[Веб-интерфейс к коллекции портов]
-* http://www.freshports.org/[FreshPorts - это более функциональный интерфейс к коллекции портов]
+* link:../ports/[О портах FreeBSD]
+* https://www.freshports.org/[FreshPorts - более развитый веб-интерфейс к Коллекции]
+* link:{handbook}ports/[Установка приложений: пакеты и порты] в Руководстве по FreeBSD
+* Просмотр Коллекции: https://cgit.freebsd.org/ports/tree/[Git-хранилище портов FreeBSD] | https://download.freebsd.org/ports/[веб].
 
-Для того, чтобы узнать о том, как _вы_ можете добавить _ваши_ любимые программы в коллекцию портов, смотрите _link:{porters-handbook}["`Руководство по созданию портов`"]_ и статью _link:{contributing}["`Участие в проекте FreeBSD`"]_.
+Чтобы узнать, как _вы_ можете добавить _ваше_ любимое программное обеспечение в Коллекцию портов, обратитесь к книге _link:{porters-handbook}[Руководство по созданию портов]_ и статье _link:{contributing}[Участие в проекте FreeBSD]_.
+
+[[derived]]
+== Дистрибутивы операционных систем, основанных на FreeBSD
+
+FreeBSD широко используется в качестве основы для построения других коммерческих операционных систем и операционных систем с открытым кодом.
+Проекты ниже особенное интересны.
+
+* https://www.truenas.com/[TrueNAS] является программным обеспечением для сетевых хранилищ (NAS), которое обеспечивает совместное использование данных и защищает их от современных угроз, связанных с вредоносными программами и программами-вымогателями. TrueNAS упрощает пользователям и клиентским устройствам доступ к совместно используемым данным при помощи практически любого протокола совместного доступа.
+* https://www.ghostbsd.org[GhostBSD] основана на FreeBSD и использует окружение GTK для обеспечения красивого интерфейса и комфортной работы на современной платформе BSD, в которую естественным образом встроено UNIX(R)-подобное рабочее окружение.
+* https://www.midnightbsd.org[MidnightBSD] ответвилась от FreeBSD 6.1 beta и продолжает использовать части более современного кода FreeBSD. Разрабатываемая с ориентацией на пользователей настольных компьютеров, MidnightBSD включает всё и даже больше того, что вы могли бы ожидать для выполнения ваших повседневных задач: почта, веб-серфинг, работа с документами, игры.
+* https://www.nomadbsd.org[NomadBSD] является готовой рабочей системой с сохраняемым состоянием для флэш-накопителей USB, которая базируется на FreeBSD. Наряду с автоматическим распознаванием и настройкой оборудования, она сконфигурирована для использования в качестве настольной системы, сразу же готовой к работе, но также пригодна для решения задач восстановления данных, использования в образовательных целях или для тестирования аппаратной совместимости FreeBSD.
+* https://www.pfsense.org/[pfSense] представляет собой специально сконфигурированный дистрибутив, построенный на базе FreeBSD, предназначенный к использованию в качестве межсетевого экрана и маршрутизатора.
+
+[[past]]
+== Архивы
+
+http://ftp-archive.FreeBSD.org/pub/FreeBSD-Archive/old-releases/[Прошлые релизы] FreeBSD.
+
+[[fastly]]
+== Сеть доставки контента Fastly
+
+Проект FreeBSD с благодарностью отмечает поддержку со стороны компании https://www.fastly.com[Fastly], которая предоставляет услуги сети доставки контента, кэширования и предоставления каналов связи, используемые для распространения образов и пакетов FreeBSD нашему международному распределённому сообществу.
+
+image::../gifs/fastlyLogo-red-SVG.svg[Fastly Logo,120]
+
+Обратитесь также к материалам о link:{handbook}mirrors[зеркалах проекта FreeBSD].
