--- a/shared/ru/urls.adoc
+++ b/shared/ru/urls.adoc
@@ -14,48 +14,48 @@ ifndef::isonline[]
 endif::[]
 
 // books
-:dev-model: {main-site-en}/books/dev-model/
+:dev-model: {main-site}/books/dev-model/
 :faq: {main-site}/books/faq/
 :handbook: {main-site}/books/handbook/
 :developers-handbook: {main-site}/books/developers-handbook/
 :arch-handbook: {main-site}/books/arch-handbook/
 :porters-handbook: {main-site}/books/porters-handbook/
 :design-44bsd: {main-site}/books/design-44bsd/
-:fdp-primer: {main-site-en}/books/fdp-primer/
+:fdp-primer: {main-site}/books/fdp-primer/
 
 // articles
-:bsdl-gpl: {main-site-en}/articles/bsdl-gpl/
-:building-products: {main-site-en}/articles/building-products/
+:bsdl-gpl: {main-site}/articles/bsdl-gpl/
+:building-products: {main-site}/articles/building-products/
 :committers-guide: {main-site}/articles/committers-guide/
 :contributing: {main-site}/articles/contributing/
-:contributors: {main-site-en}/articles/contributors/
+:contributors: {main-site}/articles/contributors/
 :cups: {main-site}/articles/cups/
 :explaining-bsd: {main-site}/articles/explaining-bsd/
-:filtering-bridges: {main-site-en}/articles/filtering-bridges/
+:filtering-bridges: {main-site}/articles/filtering-bridges/
 :fonts: {main-site}/articles/fonts/
 :freebsd-questions-article: {main-site}/articles/freebsd-questions/
-:freebsd-update-server: {main-site-en}/articles/freebsd-update-server/
+:freebsd-update-server: {main-site}/articles/freebsd-update-server/
 :geom-class: {main-site}/articles/geom-class/
 :gjournal-desktop: {main-site}/articles/gjournal-desktop/
 :hubs: {main-site}/articles/hubs/
 :ipsec-must: {main-site}/articles/ipsec-must/
-:ldap-auth: {main-site-en}/articles/ldap-auth/
-:leap-seconds: {main-site-en}/articles/leap-seconds/
-:linux-emulation: {main-site-en}/articles/linux-emulation/
-:linux-users: {main-site-en}/articles/linux-users/
+:ldap-auth: {main-site}/articles/ldap-auth/
+:leap-seconds: {main-site}/articles/leap-seconds/
+:linux-emulation: {main-site}/articles/linux-emulation/
+:linux-users: {main-site}/articles/linux-users/
 :mailing-list-faq: {main-site}/articles/mailing-list-faq/
-:nanobsd: {main-site-en}/articles/nanobsd/
+:nanobsd: {main-site}/articles/nanobsd/
 :new-users: {main-site}/articles/new-users/
 :pam: {main-site}/articles/pam/
-:pgpkeys: {main-site-en}/articles/pgpkeys/
-:port-mentor-guidelines: {main-site-en}/articles/port-mentor-guidelines/
+:pgpkeys: {main-site}/articles/pgpkeys/
+:port-mentor-guidelines: {main-site}/articles/port-mentor-guidelines/
 :pr-guidelines: {main-site}/articles/pr-guidelines/
 :problem-reports: {main-site}/articles/problem-reports/
-:rc-scripting: {main-site-en}/articles/rc-scripting/
+:rc-scripting: {main-site}/articles/rc-scripting/
 :releng: {main-site}/articles/releng/
-:freebsd-releng: {main-site-en}/articles/freebsd-releng/
-:remote-install: {main-site-en}/articles/remote-install/
-:serial-uart: {main-site-en}/articles/serial-uart/
+:freebsd-releng: {main-site}/articles/freebsd-releng/
+:remote-install: {main-site}/articles/remote-install/
+:serial-uart: {main-site}/articles/serial-uart/
 :solid-state: {main-site}/articles/solid-state/
-:vinum: {main-site-en}/articles/vinum/
-:vm-design: {main-site}/articles/vm-design/ 
+:vinum: {main-site}/articles/vinum/
+:vm-design: {main-site}/articles/vm-design/
