fix typos and wrong links in en/books and en/articles
Differential Revision: https://reviews.freebsd.org/D52435

--- a/documentation/content/en/articles/committers-guide/_index.adoc
+++ b/documentation/content/en/articles/committers-guide/_index.adoc
@@ -532,7 +532,7 @@ e.g.:
 ....
 so that won't be covered in depth here.
 
-If you want to build a custom kernel, extref:{handbook}[the kernel config section, kernelconfig] of the FreeBSD Handbook recommends creating a file MYKERNEL under sys/${ARCH}/conf with your changes against GENERIC.
+If you want to build a custom kernel, extref:{handbook}kernelconfig[the kernel config section, kernelconfig] of the FreeBSD Handbook recommends creating a file MYKERNEL under sys/${ARCH}/conf with your changes against GENERIC.
 To have MYKERNEL disregarded by Git, it can be added to .git/info/exclude.
 
 ===== Updating
@@ -687,9 +687,9 @@ The ports tree operates the same way.
 The branch names are different and the repositories are in different locations.
 
 The cgit repository web interface for use with web browsers is at https://cgit.FreeBSD.org/ports/ .
-The production Git repository is at https://git.FreeBSD.org/ports.git and at ssh://anongit@git.FreeBSD.org/ports.git (or anongit@git.FreeBSD.org:ports.git).
+The production Git repository is at https://git.FreeBSD.org/ports.git and at ssh://anongit@git.FreeBSD.org/ports.git (or `anongit@git.FreeBSD.org:ports.git`).
 
-There is also a mirror on GitHub, see extref:{handbook}/mirrors[External mirrors, mirrors] for an overview.
+There is also a mirror on GitHub, see extref:{handbook}mirrors[External mirrors, mirrors] for an overview.
 The _latest_ branch is `main`.
 The _quarterly_ branches are named `yyyyQn` for year 'yyyy' and quarter 'n'.
 
@@ -1975,11 +1975,11 @@ Before you begin, make sure that your local Git repo is up to date and has the
 correct origins set crossref:committers-guide[keeping_current,as shown above].
 
 [source,shell]
-````
+....
 % git remote -v
 freebsd https://git.freebsd.org/src.git (fetch)
 freebsd ssh://git@gitrepo.freebsd.org/src.git (push)
-````
+....
 
 The first step is to create a fork of https://github.com/freebsd/freebsd-src[FreeBSD] on GitHub following these https://docs.github.com/en/github/getting-started-with-github/fork-a-repo[guidelines].
 The destination of the fork should be your own, personal, GitHub account (gvnn3 in my case).
@@ -3157,7 +3157,7 @@ When in doubt, ask for review!
 . Respect existing maintainers if listed.
 +
 Many parts of FreeBSD are not "owned" in the sense that any specific individual will jump up and yell if you commit a change to "their" area, but it still pays to check first.
-One convention we use is to put a maintainer line in the [.filename]#Makefile# for any package or subtree which is being actively maintained by one or more people; see extref:{developers-handbook}[Source Tree Guidelines and Policies, policies] for documentation on this.
+One convention we use is to put a maintainer line in the [.filename]#Makefile# for any package or subtree which is being actively maintained by one or more people; see extref:{developers-handbook}policies[Source Tree Guidelines and Policies, policies] for documentation on this.
 Where sections of code have several maintainers, commits to affected areas by one maintainer need to be reviewed by at least one other maintainer.
 In cases where the "maintainer-ship" of something is not clear, look at the repository logs for the files in question and see if someone has been working recently or predominantly in that area.
 . Any disputed change must be backed out pending resolution of the dispute if requested by a maintainer. Security related changes may override a maintainer's wishes at the Security Officer's discretion.
@@ -3653,7 +3653,7 @@ The `-x` parameter ensures the hash `$HASH` of the `main` branch is included in 
 [[ports-qa-new-category-how]]
 ==== What is the procedure for creating a new category?
 
-Please see extref:{porters-handbook}[Proposing a New Category, proposing-categories] in the Porter's Handbook.
+Please see extref:{porters-handbook}makefiles[Proposing a New Category, proposing-categories] in the Porter's Handbook.
 Once that procedure has been followed and the PR has been assigned to the {portmgr}, it is their decision whether or not to approve it.
 If they do, it is their responsibility to:
 
@@ -3687,7 +3687,7 @@ To do this, use the [.filename]#chkorigin.sh# tool: `env PORTSDIR=/path/to/ports
 . Once this is done, you can commit the updated [.filename]#ports/Makefile# to connect the new category to the build and also commit the [.filename]#Makefile# changes for the old category or categories.
 . Add appropriate entries to [.filename]#ports/MOVED#.
 . Update the documentation by modifying:
-** the extref:{porters-handbook}[list of categories, PORTING-CATEGORIES] in the Porter's Handbook
+** the extref:{porters-handbook}makefiles[list of categories, porting-categories] in the Porter's Handbook
 +
 . Only once all the above have been done, and no one is any longer reporting problems with the new ports, should the old ports be deleted from their previous locations in the repository.
 ====
@@ -3696,7 +3696,7 @@ To do this, use the [.filename]#chkorigin.sh# tool: `env PORTSDIR=/path/to/ports
 
 This is much simpler than a physical category. Only a few modifications are needed:
 
-* the extref:{porters-handbook}[list of categories, PORTING-CATEGORIES] in the Porter's Handbook
+* the extref:{porters-handbook}makefiles[list of categories, porting-categories] in the Porter's Handbook
 
 [[ports-qa-misc-questions]]
 === Miscellaneous Questions
@@ -3722,7 +3722,7 @@ No unauthorized commits may ever be made to ports maintained by those groups.
 The packages are built multiple times each week.
 If a port fails, the maintainer will receive an email from `pkg-fallout@FreeBSD.org`.
 
-Reports for all the package builds (official, experimental, and non-regression) are aggregated at link:pkg-status.FreeBSD.org[pkg-status.FreeBSD.org].
+Reports for all the package builds (official, experimental, and non-regression) are aggregated at link:https://pkg-status.FreeBSD.org[pkg-status.FreeBSD.org].
 
 [[ports-qa-misc-INDEX]]
 ==== I added a new port. Do I need to add it to the [.filename]#INDEX#?
