--- a/documentation/content/en/books/arch-handbook/boot/_index.adoc
+++ b/documentation/content/en/books/arch-handbook/boot/_index.adoc
@@ -1530,7 +1530,7 @@ sys/kern/init_main.c:
 	}
 ....
 
-Although the sysinit framework is described in the link:/books/developers-handbook[Developers' Handbook], I will discuss the internals of it.
+Although the sysinit framework is described in the extref:{developers-handbook}[Developers' Handbook], I will discuss the internals of it.
 
 Every system initialization object (sysinit object) is created by calling a SYSINIT() macro.
 Let us take as example an `announce` sysinit object.
