--- a/documentation/content/en/books/handbook/config/_index.adoc
+++ b/documentation/content/en/books/handbook/config/_index.adoc
@@ -168,7 +168,7 @@ The state to be retrieved or set is described using a "Management Information Ba
 |Kernel functions and features
 
 |vm
-|virtual memory
+|Virtual memory
 
 |vfs
 |Filesystem
@@ -991,7 +991,7 @@ Configuring centralized logging can reduce some of the administrative burden of 
 
 In FreeBSD, centralized log file aggregation, merging, and rotation can be configured using syslogd and newsyslog.
 
-This section demonstrates an example configuration, where host `A`, named `logserv.example.com`, will collect logging information for the local network. 
+This section demonstrates an example configuration, where host `A`, named `logserv.example.com`, will collect logging information for the local network.
 
 Host `B`, named `logclient.example.com`, will be configured to pass logging information to the logging server.
 
