--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -538,7 +538,7 @@ refer to the FreeBSD Documentation Project Primer for New Contributors (extref:{
 === Updating Documentation from Source
 
 Rebuilding the FreeBSD documentation from source requires a collection of tools which are not part of the FreeBSD base system.
-The required tools can be installed following extref:{fdp-primer}[these steps, overview-quick-start] from the FreeBSD Documentation Project Primer.
+The required tools can be installed following extref:{fdp-primer}overview[these steps, overview-quick-start] from the FreeBSD Documentation Project Primer.
 
 Once installed, use `git` to fetch a clean copy of the documentation source:
 
