--- a/documentation/content/en/books/handbook/desktop/_index.adoc
+++ b/documentation/content/en/books/handbook/desktop/_index.adoc
@@ -949,7 +949,7 @@ For example, for the version localized in Spanish, it is necessary to install th
 
 [source,shell]
 ....
-# pkg install libreoffice-es
+# pkg install es-libreoffice
 ....
 
 [[calligra]]
