--- a/documentation/content/en/books/handbook/disks/_index.adoc
+++ b/documentation/content/en/books/handbook/disks/_index.adoc
@@ -1485,7 +1485,7 @@ For more details about `mdmfs`, refer to man:mdmfs[8].
 [[snapshots]]
 == File System Snapshots
 
-FreeBSD offers a feature in conjunction with crossref:config[soft-updates,Soft Updates]: file system snapshots.
+FreeBSD offers a feature in conjunction with soft updates: file system snapshots.
 
 UFS snapshots allow a user to create images of specified file systems, and treat them as a file.
 When using the crossref:zfs[,Z file system (ZFS)], refer to crossref:zfs[zfs-zfs-snapshot,"Managing Snapshots"] on how to use snapshots.
