--- a/documentation/content/en/books/porters-handbook/special/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/special/_index.adoc
@@ -4844,7 +4844,7 @@ See crossref:uses[uses-sqlite,`sqlite`] for more information.
 
 [.filename]#rc.d# scripts are used to start services on system startup, and to give administrators a standard way of stopping, starting and restarting the service.
 Ports integrate into the system [.filename]#rc.d# framework.
-Details on its usage can be found in extref:{handbook}[the rc.d Handbook chapter, configtuning-rcd].
+Details on its usage can be found in extref:{handbook}config[the rc.d Handbook chapter, configtuning-rcd].
 Detailed explanation of the available commands is provided in man:rc[8] and man:rc.subr[8].
 Finally, there is extref:{rc-scripting}[an article] on practical aspects of [.filename]#rc.d# scripting.
 
