--- a/documentation/content/en/books/porters-handbook/upgrading/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/upgrading/_index.adoc
@@ -90,7 +90,7 @@ Before using it, please read [.filename]#/usr/ports/Tools/scripts/README.patchto
 
 If the port is unmaintained, and it is actively being used, please consider volunteering to become its maintainer.
 FreeBSD has over 4000 ports without maintainers, and this is an area where more volunteers are always needed.
-(For a detailed description of the responsibilities of maintainers, refer to the section in the extref:{developers-handbook}[Developer's Handbook, POLICIES-MAINTAINER].)
+(For a detailed description of the responsibilities of maintainers, refer to the section in the extref:{developers-handbook}policies[Developer's Handbook, policies-maintainer].)
 
 To submit the diff, use the https://bugs.freebsd.org/submit/[bug submit form] (product `Ports & Packages`, component `Individual Port(s)`).
 Always include the category with the port name, followed by colon, and brief description of the issue.
