--- a/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/makefiles/_index.adoc
@@ -114,17 +114,17 @@ See below on how to use  man:pkg-version[8] to compare versions.
 [source,shell]
 ....
 % pkg version -t 1.2 1.3
-< <.>
+ < <.>
 % pkg version -t 1.2 1.2
-= <.>
+ = <.>
 % pkg version -t 1.2 1.2.0
-= <.>
+ = <.>
 % pkg version -t 1.2 1.2.p1
-> <.>
+ > <.>
 % pkg version -t 1.2.a1 1.2.b1
-< <.>
+ < <.>
 % pkg version -t 1.2 1.2p1
-< <.>
+ < <.>
 ....
 
 <.> `1.2` is before `1.3`.
@@ -1586,7 +1586,7 @@ GH_TAGNAME=	c472d66b
 ....
 
 This creates a versioning scheme that increases over time, and that is still before version `0`.
-See crossref:makefiles[makefile-versions-ex-pkg-version, this secion on how to compare versions] using man:pkg-version[8]):
+See crossref:makefiles[makefile-versions-ex-pkg-version, this secion on how to compare versions] using man:pkg-version[8]:
 
 [source,shell]
 ....
@@ -1631,7 +1631,7 @@ USE_GITHUB=	yes
 ....
 
 This creates a versioning scheme that increases over time (well, over commits), and does not conflict with the creation of a `0.7.4` version.
-See crossref:makefiles[makefile-versions-ex-pkg-version, this section for how to compare versions] using  man:pkg-version[8]):
+See crossref:makefiles[makefile-versions-ex-pkg-version, this section for how to compare versions] using  man:pkg-version[8]:
 
 [source,shell]
 ....
